@@ -19,8 +19,11 @@
             <div class="wrapper">      
                 <!-- About me -->
                 <div align="center" id="about">
-                    <h3 class="spacing_medium">- About me -</h3>
-                    <p>Hello there! Welcome to my web site. The web site showcases some of my projects that I have created and shared on GitHub.</p>
+                    <p style="display: inline-block; font-size: 20px;">&#10021;&nbsp;&nbsp;</p>
+                    <h5 class="spacing_medium" style="display: inline-block;">My Background</h5>
+                    <p style="display: inline-block; font-size: 20px;">&nbsp;&nbsp;&#10021;</p>
+                    
+                    <p style="padding-bottom: 40px;">Hello there! Welcome to my web site. The web site showcases some of my projects that I have created and shared on GitHub.</p>
                     <p align="justify">
                         As for me, I am an undergraduate Computer Science student. I hope to be able to become a developer one day. The language that I mainly use is 
                         Java though I am also experimenting working with other languages such as Python and JavaScript. I mostly work with Java applications that emphasized more
@@ -31,7 +34,9 @@
                 </div>
                 <!-- Contact -->
                 <div align="center" id="contact">
-                    <h3>- Contact -</h3>
+                    <p style="display: inline-block; font-size: 20px;">&#10021;&nbsp;&nbsp;</p>
+                    <h5 style="display: inline-block;">Contact</h5>
+                    <p style="display: inline-block; font-size: 20px;">&nbsp;&nbsp;&#10021;</p>
                     <p>If you have any questions, feel free to contact me via email.</p>
                     <p>Email: diane.m.truong@gmail.com</p>
                 </div>
