@@ -23,7 +23,7 @@
             </div>
             <!-- Bayes -->
             <div align="center">
-                <h2 class="spacing_large">Naive Bayes Classifier Implementation</h2>
+                <h2 class="spacing_large" style="text-transform: none;">Naive Bayes Classifier Implementation</h2>
 
 
                 <!-- Classification -->
@@ -79,7 +79,7 @@
 
                     <div> <!-- Support -->
                         <h3 id="content_h3">Support</h3>
-                        <p>To report, bug, or request a feature, please send it <a href="https://github.com/DMCTruong/Naive-Bayes-Classifier/issues">here</a>.</p>
+                        <p>To report an issue, a bug, or request a feature, please send it <a href="https://github.com/DMCTruong/Naive-Bayes-Classifier/issues">here</a>.</p>
                     </div>
 
                     <div> <!-- Contribute -->
