@@ -44,22 +44,24 @@
                 <!-- Slide Show -->
             </div>
             <div align="center">
-                <img src="https://dmctruong.000webhostapp.com/images/employee_login.png" class="image_slides" style="width:870px; height:300px">
-                <img src="https://dmctruong.000webhostapp.com/images/employee_register.png" class="image_slides" style="width:870px; height:300px">
-                <img src="https://dmctruong.000webhostapp.com/images/employee_menu.png" class="image_slides" style="width:870px; height:300px">
-                <img src="https://dmctruong.000webhostapp.com/images/employee_search.png" class="image_slides" style="width:870px; height:300px">
-                <img src="https://dmctruong.000webhostapp.com/images/employee_count.png" class="image_slides" style="width:870px; height:300px">
-                <img src="https://dmctruong.000webhostapp.com/images/employee_print.png" class="image_slides" style="width:870px; height:300px">
+                <div style="margin-left: -91px; margin-right: -91px; height: 450px; padding-top: 30px; background: #3c464c;">
+                    <img src="https://dmctruong.000webhostapp.com/images/employee_login.png" class="image_slides" style="width:870px; height:300px">
+                    <img src="https://dmctruong.000webhostapp.com/images/employee_register.png" class="image_slides" style="width:870px; height:300px">
+                    <img src="https://dmctruong.000webhostapp.com/images/employee_menu.png" class="image_slides" style="width:870px; height:300px">
+                    <img src="https://dmctruong.000webhostapp.com/images/employee_search.png" class="image_slides" style="width:870px; height:300px">
+                    <img src="https://dmctruong.000webhostapp.com/images/employee_count.png" class="image_slides" style="width:870px; height:300px">
+                    <img src="https://dmctruong.000webhostapp.com/images/employee_print.png" class="image_slides" style="width:870px; height:300px">
 
-                <div style="padding-top: 5px;">
-                    <img src="https://dmctruong.000webhostapp.com/images/employee_login.png" class="img_preview opacity hover-opacity-off" style="width: 100px; height: 50px;" onclick="currentDiv(1)">
-                    <img src="https://dmctruong.000webhostapp.com/images/employee_register.png" class="img_preview opacity hover-opacity-off" style="width: 100px; height: 50px;" onclick="currentDiv(2)">
-                    <img src="https://dmctruong.000webhostapp.com/images/employee_menu.png" class="img_preview opacity hover-opacity-off" style="width: 100px; height: 50px;" onclick="currentDiv(3)">
-                    <img src="https://dmctruong.000webhostapp.com/images/employee_search.png" class="img_preview opacity hover-opacity-off" style="width: 100px; height: 50px;" onclick="currentDiv(4)">
-                    <img src="https://dmctruong.000webhostapp.com/images/employee_count.png" class="img_preview opacity hover-opacity-off" style="width: 100px; height: 50px;" onclick="currentDiv(5)">
-                    <img src="https://dmctruong.000webhostapp.com/images/employee_print.png" class="img_preview opacity hover-opacity-off" style="width: 100px; height: 50px;" onclick="currentDiv(6)">
+                    <div style="padding-top: 30px;">
+                        <img src="https://dmctruong.000webhostapp.com/images/employee_login.png" class="img_preview opacity hover-opacity-off" style="width: 100px; height: 50px;" onclick="currentDiv(1)">
+                        <img src="https://dmctruong.000webhostapp.com/images/employee_register.png" class="img_preview opacity hover-opacity-off" style="width: 100px; height: 50px;" onclick="currentDiv(2)">
+                        <img src="https://dmctruong.000webhostapp.com/images/employee_menu.png" class="img_preview opacity hover-opacity-off" style="width: 100px; height: 50px;" onclick="currentDiv(3)">
+                        <img src="https://dmctruong.000webhostapp.com/images/employee_search.png" class="img_preview opacity hover-opacity-off" style="width: 100px; height: 50px;" onclick="currentDiv(4)">
+                        <img src="https://dmctruong.000webhostapp.com/images/employee_count.png" class="img_preview opacity hover-opacity-off" style="width: 100px; height: 50px;" onclick="currentDiv(5)">
+                        <img src="https://dmctruong.000webhostapp.com/images/employee_print.png" class="img_preview opacity hover-opacity-off" style="width: 100px; height: 50px;" onclick="currentDiv(6)">
+                    </div>
+                    <script> showDivs(slideIndex);</script>
                 </div>
-                <script> showDivs(slideIndex);</script>
 
                 <div> <!-- Installation -->
                     <h3 id="content_h3">Installation</h3>
@@ -76,8 +78,8 @@
 
                 <div>
                     <h3 id="content_h3">Support</h3>
-                    <p>To report or bug, please send it <a href="https://github.com/DMCTruong/Class-Projects/issues">here</a>.
-                    Be sure to add the prefix "[EMS] " to the title before submitting.</p>
+                    <p>To report an issue, a bug, or request a feature, please send it <a href="https://github.com/DMCTruong/Class-Projects/issues">here</a>.
+                        Be sure to add the prefix "[EMS] " to the title before submitting.</p>
                 </div>
 
                 <div> <!-- Contribute -->
