@@ -54,7 +54,7 @@
                 <!-- Support -->
                 <div>
                     <h3 id="content_h3">Support</h3>
-                    <p>To report or bug, please send it <a href="https://github.com/DMCTruong/Class-Projects/issues">here</a>.
+                    <p>To report an issue, a bug, or request a feature, please send it <a href="https://github.com/DMCTruong/Class-Projects/issues">here</a>.
                         Be sure to add the prefix "[Server/Client] " to the title before submitting.</p>
                 </div>
 
