@@ -59,7 +59,7 @@
 
                 <div> <!-- Support -->
                     <h3 id="content_h3">Support</h3>
-                    <p>If there's an issue or bug, report it <a href="https://github.com/DMCTruong/Git-Bash-Scripts/issues">here</a> and I will take a look.</p>
+                    <p>To report an issue, a bug, or request a feature, report it <a href="https://github.com/DMCTruong/Git-Bash-Scripts/issues">here</a> and I will take a look.</p>
                 </div>
 
                 <div> <!-- Contribute -->
